Fix modal overflow behaviour

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -136,6 +136,31 @@ body {
   display: block;
 }
 
+.Modal {
+  position: absolute;
+  background-color: #fff;
+  inset: 50% auto auto 50%;
+  border: 1px solid rgb(204, 204, 204);
+  max-height: 80vh;
+  overflow-y: auto;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+}
+
+.Modal .close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 1.4em;
+}
+
 @media only screen and (max-width: 600px) {
   .sections {
     display: none;
